kyverno-networkpolicy-training/code/kyverno-ops/tag12/cleanup-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- name: tenant-a
  labels: {tenant: a}
